force-app/main/default/objects/District_360_FSA_API__mdt/District_360_FSA_API__mdt.object-meta.xml
<CustomObject>
    <description>D360 FSA type,subtype and subsubtypes field api name,fieldset Name</description>
    <label>District 360 FSA API</label>
    <pluralLabel>District 360 FSA API</pluralLabel>
</CustomObject>