force-app/main/default/objects/District_360_FSA_API__mdt/fields/Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Api_Name__c</fullName>
    <inlineHelpText>Field api name</inlineHelpText>
    <label>Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>