force-app/main/default/objects/District_360_FSA_API__mdt/fields/FieldsetName__c.field-meta.xml
<CustomField>
    <fullName>FieldsetName__c</fullName>
    <inlineHelpText>Fieldset name</inlineHelpText>
    <label>FieldsetName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>