force-app/main/default/objects/District_360_FSA_API__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>225</length>
    <type>Text</type>
</CustomField>