force-app/main/default/objects/District_360_FSA_API__mdt/fields/SOQLQuery__c.field-meta.xml
<CustomField>
    <fullName>SOQLQuery__c</fullName>
    <label>SOQLQuery</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>