force-app/main/default/objects/District_360_FSA_API__mdt/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>url</label>
    <length>225</length>
    <type>Text</type>
</CustomField>